cmake_minimum_required(VERSION 3.5.1)

set(CMAKE_CXX_FLAGS "-std=gnu++11")

#constructor
add_subdirectory(constructor)
#lambda
add_subdirectory(lambda)
#map
add_subdirectory(map)
#thread
add_subdirectory(thread)
#vector
add_subdirectory(vector)
#template
add_subdirectory(template)
#Exception_Handling
add_subdirectory(Exception_Handling)
#function_pointer
add_subdirectory(function_pointer)
#inheritance
add_subdirectory(inheritance)
#friend
add_subdirectory(friend)
#shared_pointer
add_subdirectory(shared_pointer)
#uniform_initialization
add_subdirectory(uniform_initialization)
